exports[`(.not).toHaveImATeapotStatus > using axios > .not.toHaveImATeapotStatus > fails when response have status code 418 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveImATeapotStatus()</intensity>

Expected status code to not be 418 received:
  <red>418</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 418,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveImATeapotStatus > using axios > .toHaveImATeapotStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveImATeapotStatus()</intensity>

Expected status code to be 418 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveImATeapotStatus > using got > .not.toHaveImATeapotStatus > fails when response have status code 418 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveImATeapotStatus()</intensity>

Expected status code to not be 418 received:
  <red>418</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 418,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveImATeapotStatus > using got > .toHaveImATeapotStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveImATeapotStatus()</intensity>

Expected status code to be 418 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
